<?xml version="1.0"?>
<package format="2">
  <name>image_viewer</name>
  <version>0.0.0</version>
  <description>The Image_viewer package</description>
  <maintainer email="rafaga22630@todo.todo">rafaga22630</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
